updating some shi